Cleans up the CSS. Refactors grid. Adds grid layout to other screens.

--- a/source/html_partials/common/header.html
+++ b/source/html_partials/common/header.html
@@ -1,6 +1,13 @@
 <header class="header">
     <div class="inside flex space-between vert-center">
-        <h1>HIPAA Audit Tool</h1>
+        <div class="logo-container flex vert-center">
+            <figure>
+                <svg xmlns="http://www.w3.org/2000/svg" class="header-logo">
+                    <use href="#mib-logo"/> 
+                </svg>
+            </figure>    
+            <h1>HIPAA Audit Tool</h1>
+        </div>
         <button class="btn secondary">Log Out</button>
     </div>
 </header>
