--- a/source/html_partials/reports_view/modules/reports_table.html
+++ b/source/html_partials/reports_view/modules/reports_table.html
@@ -34,16 +34,16 @@
         5/20/2020
     </td>
     <td class="tg-0pky">
-        3
-    </td>
-    <td class="tg-0pky">
         50
     </td>
     <td class="tg-0pky">
-       5
+        3
     </td>
     <td class="tg-0pky">
-       <a class="icn">
+       1
+    </td>
+    <td class="tg-0pky">
+       <a class="icn-wrapper">
         <svg xmlns="http://www.w3.org/2000/svg" class="icn">
             <use href="#icn-download"/> 
           </svg>
