Major updates to ui to match takeaways from design review.

--- a/source/html_partials/audit_view/modules/audit-table-header.html
+++ b/source/html_partials/audit_view/modules/audit-table-header.html
@@ -1,4 +1,6 @@
-<header class="loose">
-    <h2>Report for Week of 05/10/2020 - 05/16/2020</h2>
-    <p><strong>Report Status</strong> Incomplete</p>
-</header>
+<div class="flex space-between border-bottom loose">
+    <header class="loose">
+        <h2>Report for Week of 05/10/2020 - 05/16/2020</h2>
+        <p class="none"><strong>Report Status</strong> Incomplete</p>
+    </header>
+</div>
