--- a/source/html_partials/audit_view/modules/audit-table-tools.html
+++ b/source/html_partials/audit_view/modules/audit-table-tools.html
@@ -1,13 +1,11 @@
-
-<div class="flex space-between">
-    <form>
-        <div class="flex">
-            <div class="flex vert-center">
-            <label for="item-count" class="r-cozy">Count</label>
-            <input type="text" id="item-count" class="r-cozy" placeholder="Items in Audit">
-            </div>
-            <button class="btn secondary align-fix">Refresh</button>
+<div class="flex end">
+    <div class="flex vert-center">
+        <div class="flex vert-center">
+            <label for="item-count" class="r-comfy none">Count</label>
+            <input type="text" id="item-count" class="r-cozy none" placeholder="Items in Audit">
         </div>
-    </form>
-        <button class="btn primary">Begin Audit</button>
+        <button class="btn secondary r-cozy">Refresh</button>       
+            <input type="checkbox" id="count" />
+            <label for="count" class="none l-tight">Default</label>      
+    </div>
 </div>
