--- a/source/html_partials/audit_view/modules/audit_table.html
+++ b/source/html_partials/audit_view/modules/audit_table.html
@@ -5,22 +5,22 @@
         <th class="tg-0pky">
             Source
         </th>
-        <th class="tg-0pky">
-            Vendor
-        </th>
-        <th class="tg-0pky icn-col">
+        <th class="tg-0pky icn-col center">
             Status
         </th>
-        <th class="tg-0pky icn-col">
+        <th class="tg-0pky icn-col center">
             Note
+        </th>
+        <th class="tg-0pky">
+            Reason
         </th>
         <th class="tg-0pky">
             Reviewer
         </th>
-        <th class="tg-0pky">
+        <th class="tg-0pky fixed">
             Date
         </th>
-        <th class="tg-0pky">
+        <th class="tg-0pky icn-col center">
             PDF
         </th>
         <th class="tg-0pky fixed">
@@ -32,18 +32,18 @@
         <td class="tg-0pky">
             Insurance Company
         </td>
-        <td class="tg-0pky">
-            Epic
-        </td>
-        <td class="tg-0pky">
+        <td class="tg-0pky center">
             <svg xmlns="http://www.w3.org/2000/svg" class="icn alert">
                 <use href="#icn-flag"/> 
-                </svg>
+            </svg>
         </td>
-        <td class="tg-0pky">
+        <td class="tg-0pky center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icn">
                     <use href="#icn-note"/> 
                   </svg>
+        </td>
+        <td class="tg-0pky">
+            Reason goes here
         </td>
         <td class="tg-0pky">
             Smith, J.
@@ -51,7 +51,7 @@
         <td class="tg-0pky">
             05/18/2020
         </td>
-        <td class="tg-0pky">
+        <td class="tg-0pky center">
             <a href="#" class="icn-wrapper">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icn">
                     <use href="#icn-download"/> 
@@ -66,15 +66,15 @@
             <td class="tg-0pky">
                 Insurance Company
             </td>
-            <td class="tg-0pky">
-                Epic
-            </td>
-            <td class="tg-0pky">
+            <td class="tg-0pky center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icn">
                         <use href="#icn-check"/> 
-                      </svg>
+                    </svg>
+            </td>
+            <td class="tg-0pky center">
             </td>
             <td class="tg-0pky">
+                Reason goes here
             </td>
             <td class="tg-0pky">
                 Smith, J.
@@ -82,7 +82,7 @@
             <td class="tg-0pky">
                 05/18/2020
             </td>
-            <td class="tg-0pky">
+            <td class="tg-0pky center ">
                 <a href="#" class="icn-wrapper">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icn">
                         <use href="#icn-download"/> 
@@ -97,14 +97,14 @@
                 <td class="tg-0pky">
                     Insurance Company
                 </td>
-                <td class="tg-0pky">
-                    Epic
-                </td>
-                <td class="tg-0pky">
+                <td class="tg-0pky center">
             
                 </td>
-                <td class="tg-0pky">
+                <td class="tg-0pky center">
                
+                </td>
+                <td class="tg-0pky">
+                    Reason goes here
                 </td>
                 <td class="tg-0pky">
                     Smith, J.
@@ -112,7 +112,7 @@
                 <td class="tg-0pky">
                     05/18/2020
                 </td>
-                <td class="tg-0pky">
+                <td class="tg-0pky center">
                     <a href="#" class="icn-wrapper">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icn">
                             <use href="#icn-download"/> 
