--- a/source/html_partials/reports_view/modules/reports_table.html
+++ b/source/html_partials/reports_view/modules/reports_table.html
@@ -8,16 +8,16 @@
     <th class="tg-0pky">
         Completed
     </th>
-    <th class="tg-0pky">
+    <th class="tg-0pky center">
         Count
     </th>
-    <th class="tg-0pky">
+    <th class="tg-0pky center">
         Audited
     </th>
-    <th class="tg-0pky">
+    <th class="tg-0pky center">
         Flagged
     </th>
-    <th class="tg-0pky icn-col">
+    <th class="tg-0pky icn-col center">
         
     </th>
     <th class="tg-0pky fixed">
@@ -33,16 +33,16 @@
     <td class="tg-0pky">
         5/20/2020
     </td>
-    <td class="tg-0pky">
+    <td class="tg-0pky center">
         50
     </td>
-    <td class="tg-0pky">
+    <td class="tg-0pky center">
         3
     </td>
-    <td class="tg-0pky">
+    <td class="tg-0pky center">
        1
     </td>
-    <td class="tg-0pky">
+    <td class="tg-0pky center">
        <a class="icn-wrapper">
         <svg xmlns="http://www.w3.org/2000/svg" class="icn">
             <use href="#icn-download"/> 
