--- a/source/html_partials/single_view/modules/single_view_controls.html
+++ b/source/html_partials/single_view/modules/single_view_controls.html
@@ -1,5 +1,8 @@
-<div class="page-controls flex center">
-    @@include('single_view_note.html')   
-    @@include('single_view_toggles.html')  
-    @@include('single_view_switcher.html')  
+<div class="page-controls flex vert-center space-between comfy">
+    <div class="flex vert-center">
+        @@include('single_view_switcher.html')  
+        @@include('single_view_toggles.html') 
+        @@include('single_view_note.html')  
+    </div> 
+    @@include('single_view_pdf_loader.html')  
 </div>   
