--- a/source/html_partials/single_view/modules/single_view_pages_container.html
+++ b/source/html_partials/single_view/modules/single_view_pages_container.html
@@ -1,6 +1,4 @@
 <div class="viewer-container">
-    <div class="page-container flex center">
+        @@include('single_view_page_right.html')   
         @@include('single_view_page.html')   
-        @@include('single_view_page.html')   
-    </div>
 </div>
