--- a/source/html_partials/single_view/modules/single_view_switcher.html
+++ b/source/html_partials/single_view/modules/single_view_switcher.html
@@ -1,13 +1,13 @@
-<div class="flex vert-center r-wide l-wide">
-    <a href="" class="btn round">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icn">
-          <use href="#icn-left"/> 
-        </svg>
-      </a>
+<div class="flex vert-center r-wide">
+  <a href="" class="btn round r-cozy">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icn">
+        <use href="#icn-left"/> 
+      </svg>
+    </a>
 
-      <a href="" class="btn round">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icn">
-          <use href="#icn-right"/> 
-        </svg>
-      </a>
-  </div>
+    <a href="" class="btn round">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icn">
+        <use href="#icn-right"/> 
+      </svg>
+    </a>
+</div>
