--- a/source/html_partials/single_view/modules/single_view_toggles.html
+++ b/source/html_partials/single_view/modules/single_view_toggles.html
@@ -1,10 +1,10 @@
-<div class="flex vert-center l-wide r-wide">
+<div class="flex vert-center r-wide">
     <input type="radio" class="toggle" id="approve-toggle" name="audit-controls" value="approve">
-    <label for="approve-toggle"><span class="hidden">Approve</span>
+    <label for="approve-toggle" class="r-cozy">
       <svg xmlns="http://www.w3.org/2000/svg" class="icn">
         <use href="#icn-check"/> 
       </svg>
-      <span class="hidden">Flag</span>
+      <span class="hidden">Approve</span>
     </label>
          
     <input type="radio" id="flag-toggle" class="toggle" name="audit-controls" value="flag">
