--- a/source/html_partials/common/head.html
+++ b/source/html_partials/common/head.html
@@ -10,4 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet"> 
  
     <link rel="stylesheet" href="/css/main_styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+
 </head>
