--- a/source/html_partials/common/header.html
+++ b/source/html_partials/common/header.html
@@ -1,12 +1,14 @@
-<header class="header">
+<header class="header cozy">
     <div class="inside flex space-between vert-center">
         <div class="logo-container flex vert-center">
-            <figure>
-                <svg xmlns="http://www.w3.org/2000/svg" class="header-logo">
-                    <use href="#mib-logo"/> 
-                </svg>
-            </figure>    
-            <h1>HIPAA Audit Tool</h1>
+            <a href="">
+                <figure class="r-comfy">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="header-logo">
+                        <use href="#mib-logo"/> 
+                    </svg>
+            </figure>  
+            </a>  
+            <h1 class="l-comfy">HIPAA Audit Tool</h1>
         </div>
         <button class="btn secondary">Log Out</button>
     </div>
