--- a/source/html_partials/single_view/modules/single_view_header.html
+++ b/source/html_partials/single_view/modules/single_view_header.html
@@ -1,3 +1,3 @@
-<header class="header-single">
-    <p class="center white bold">1 of 50</p>
+<header class="header-single tight">
+    <p class="white bold">1 of 50</p>
 </header>
