--- a/source/html_partials/single_view/modules/single_view_note.html
+++ b/source/html_partials/single_view/modules/single_view_note.html
@@ -1,3 +1,3 @@
-<div class="notes-field r-wide flex vert-center">
-    <textarea rows="2" cols="50" placeholder="Add a note"></textarea>
+<div class="notes-field r-loose">
+    <textarea rows="1" placeholder="Add a note ..."></textarea>
 </div>
