Adds PDF view styles and markup into repo.

--- a/source/html_partials/reports_view/modules/reports_table.html
+++ b/source/html_partials/reports_view/modules/reports_table.html
@@ -43,11 +43,12 @@
        1
     </td>
     <td class="tg-0pky center">
-       <a class="icn-wrapper">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icn">
-            <use href="#icn-download"/> 
-          </svg>
-       </a>
+        <a href="#" class="icn-wrapper">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icn">
+                <use href="#icn-download"/> 
+              </svg>
+        </a>
+    </td>
     </td>
     <td class="tg-0pky">
         <button class="btn secondary">View</button>
