--- a/source/html_partials/single_view/modules/single_view_page.html
+++ b/source/html_partials/single_view/modules/single_view_page.html
@@ -1,5 +1,3 @@
 <div class="page-viewer left">
-    <object data="http://localhost:8000/pdfjs/web/viewer.html?file=http://localhost:8000/pdf/testfile.pdf" type="application/pdf" width="100%" height="100%">
-        <p><a href="http://localhost:8000/pdfjs/web/viewer.html?file=http://localhost:8000/pdf/testfile.pdf">http://localhost:8000/pdfjs/web/viewer.html?file=http://localhost:8000/pdf/testfile.pdf</a></p>
-    </object>
+    @@include('single_view_pdf.html')   
 </div>
